--- a/MicroServices/UserManagement/src/main/resources/application.properties
+++ b/MicroServices/UserManagement/src/main/resources/application.properties
@@ -6,3 +6,10 @@ spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.check_nullability=false
 server.port=8083
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=freelancingscape01@gmail.com
+spring.mail.password=gikjdkhufxghbdze
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
